--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 		    <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./data/project-1.png"
+                src="./data/proect/cinema.PNG"
                 alt="Project 1"
                 class="project-img"
               />
@@ -409,17 +409,18 @@
 		    <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./data/project-1.png"
+                src="./data/proect/game.PNG"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">E-Shop</h2>
-			<p> Spring Boot</p>
+            <h2 class="experience-sub-title project-title">Racin car game</h2>
+			<p> Windows Forms .NET</p>
+			</br>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/hristijan-stojanov/webProgramiranje'"
+                onclick="location.href='https://github.com/hristijan-stojanov/FINKI-VP_PROEKT'"
               >
                 Github
               </button>
