--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./data/cv/Hristijan Stojanov CV.pdf')"
+            onclick="window.open('./data/cv/Hristijan Stojanov CV1.pdf')"
           >
             Download CV
           </button>
