--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Hristijan Stojanov</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+
   </head>
   <body>
+ 
     <nav id="desktop-nav">
       <div class="logo"><b>Hristijan Stojanov</b></div>
       <div>
@@ -59,13 +61,13 @@
             src="./data/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/hristijan-stojanov-b878882b9/'"
+            onclick="openInNewTab('https://www.linkedin.com/in/hristijan-stojanov-b878882b9/')"
           />
           <img
             src="./data/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/hristijan-stojanov'"
+            onclick="openInNewTab('https://github.com/hristijan-stojanov')"
           />
         </div>
       </div>
@@ -96,7 +98,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p><b>Software engineering and information systems</b><br /><b><a href='https://www.finki.ukim.mk/mk'>Faculty of Computer Science and Engineering - Skopje</a></b></p>
+              <p><b>Software engineering and information systems</b><br /><b><a href='https://www.finki.ukim.mk/mk' target="_blank">Faculty of Computer Science and Engineering - Skopje</a></b></p>
             </div>
         
 		  </div>
@@ -310,7 +312,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/hristijan-stojanov/E-test-app'"
+                onclick="openInNewTab('https://github.com/hristijan-stojanov/E-test-app')"
               >
                 Github
               </button>
@@ -331,7 +333,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/hristijan-stojanov/IS'"
+                onclick="openInNewTab('https://github.com/hristijan-stojanov/IS')"
               >
                 Github
               </button>
@@ -352,7 +354,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/hristijan-stojanov/webProgramiranje'"
+                onclick="openInNewTab('https://github.com/hristijan-stojanov/webProgramiranje')"
               >
                 Github
               </button>
@@ -378,7 +380,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/hristijan-stojanov/adster'"
+                onclick="openInNewTab('https://github.com/hristijan-stojanov/adster')"
               >
                 Github
               </button>
@@ -399,7 +401,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/hristijan-stojanov/FINKI-VMS-PARKING-PLAC'"
+                onclick="openInNewTab('https://github.com/hristijan-stojanov/FINKI-VMS-PARKING-PLAC')"
               >
                 Github
               </button>
@@ -414,13 +416,13 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Racin car game</h2>
+            <h2 class="experience-sub-title project-title">Racing car game</h2>
 			<p> Windows Forms .NET</p>
 			</br>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/hristijan-stojanov/FINKI-VP_PROEKT'"
+                onclick="openInNewTab('https://github.com/hristijan-stojanov/FINKI-VP_PROEKT')"
               >
                 Github
               </button>
@@ -450,7 +452,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/hristijan-stojanov-b878882b9/">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/hristijan-stojanov-b878882b9/" target="_blank" >LinkedIn</a></p>
         </div>
       </div>
     </section>
