--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           
           
           <div class="text-container">
-            <p id='aboutp'>I am a student completing studies in software engineering and information systems,
+            <p id='aboutp'>I am a soon-to-be software engineer at the FCSE-Skopje,
 			passionate about critical thinking and problem-solving in application development.
 			My dedication to learning and mastering new technologies makes me a curious and motivated individual.
 			I have experience working on team projects where I have honed my communication and collaboration skills.
