--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Hristijan Stojanov">
-	<link rel="icon" type="image/png" href="./data/logo.PNG" class="rounded-corners">
-
+    <link rel="icon" type="image/png" href="./data/logo.png" class="rounded-corners">
     <title>Hristijan Stojanov</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
